projects/Media/docroot/assets/css/common/portraititem.css
/* ... */
.portrait-item-header{
  position: relative;
	margin-top: 0px;
  overflow: hidden;
}

.portrait-item-header::after {
  position: absolute;
  content: '';
  width: 10%;
  height: 100%;
  bottom: 0;
  right: 0;
  background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 90%);
}

.portrait-item-header .portrait-item-header-name{
	margin-top: 8px;
}
[data-feature-productcard="2018"] .portrait-item-header .portrait-item-header-name{
	margin-top: 3px;
	vertical-align: top;
	height: 72px;
}

.portrait-item-burst_wrapper{
	padding-bottom: 0px;
}

.portrait-item .portrait-item-header .product-name-no-brand .ellip-line{
  display: inline-block;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  max-width: 100%;
  vertical-align:top
}

.portrait-item .portrait-item-header .product-name-no-brand .ellip,
.portrait-item .portrait-item-header .product-name-no-brand .ellip-line{
  position: relative;
  overflow: hidden;
}

#transactionalPopup .portrait-item .portrait-item-header .product-name-no-brand .ellip-line{
	display: block;
    text-overflow: inherit;
    white-space: normal;
}

.qs-content .lineitems22 .itemlist-item-controls{
  float:right;
  margin:18px 0 28px 30px;
}

.qs-content .lineitems22 .itemlist-item-controls-subtotal{
  padding:0;
}

.qs-content .lineitems22 .itemlist-item-salesunit,
.qs-content .lineitems22 .itemlist-item-addtocart,
.qs-content .lineitems22 .itemlist-item-controls-subtotal,
.qs-content .lineitems22 .itemlist-item-price {
	display:block;
}

.qs-content .lineitems22 .itemlist-item-controls-subtotal{
	width: auto;
	float: right;
    text-align: right;
	margin: 0 40px 0 0;
}
.itemlist-item-controls .qtyinput .quantity_plus{
	background-color: #4fa157;
	border: 1px solid #4fa157;
}
.itemlist-item-controls .qtyinput .quantity_minus{
	background-color: #4fa157;
	border: 1px solid #4fa157;
}
/* APPBUG-4501 */

.qs-content .lineitems22 .itemlist-item-header-buttons {
  float:none;
  margin: 0 0 10px;
}

.qs-content .lineitems22 .itemlist-item-header-buttons button{
  margin-left:0;
}
.qs-content .lineitems22 .itemlist-item-header-buttons button.addtolist{
	border: 0;
	color: #408244;
	font-weight: normal;
}
.qs-content .lineitems22 .itemlist-item-header-buttons button.addtolist:hover{
	color: #5fb069;
	background: none;
    text-decoration: underline;
}
.qs-content .lineitems22 .itemlist-item-header-buttons button.addtolist:focus{
	color: #5fb069;
	background: none;
    text-decoration: underline;
    box-shadow:none;
}
.qs-content .lineitems22 .itemlist-item-header-buttons button.deletefromlist{
	border-left: 1px solid #e0e3d0;
	padding: 4px 20px;
}
.qs-content .lineitems22 .itemlist-item-header,
.qs-content .lineitems22 .itemlist-item-price,
.qs-content .lineitems22 .itemlist-item-header-buttons{
  margin-left:0px;
}

.cssBurst,
.cssBurst span {
	width: 2.15em;
	height: 2.15em;
	display: block;
	background-color: #E77630; /* orange */
	line-height: 0.75em;
}
.cssBurst {
	position: relative;
	top: 0.5em;
	left: 0.5em;
	text-align: center;
	text-decoration: none;
	color: #fff;
	font-family: TradeGothic, Trebuchet MS;
	text-transform: uppercase;
	font-size: 12px;
}
.cssBurst { /* 6-point, -(span rotation * # points) */
	-webkit-transform: rotate(-135deg);
	-moz-transform: rotate(-135deg);
	transform: rotate(-135deg);
}
.cssBurst span {
	-webkit-transform: rotate(22.5deg);
	-moz-transform: rotate(22.5deg);
	transform: rotate(22.5deg);
}
.cssBurst span p {
	margin: 0;
	padding: 4px 0;
	font-size: 12px;
	line-height: 0.9em;
	-webkit-transform: rotate(-19deg);
	-moz-transform: rotate(-19deg);
	transform: rotate(-19deg);
}
.cssBurst.going span p {
	font-size: 10px;
}
.cssBurst.back span p {
	padding: 3px 0;
}
.cssBurst.new span p,
.cssBurst.free span p {
	padding: 8px 0;
}

.cssBurst.free, .cssBurst.free span {
	background-color: #C94747;  /* red */
}
.cssBurst.deal, .cssBurst.deal span {
	background-color: #C94747;  /* red */
}
.cssBurst.fav, .cssBurst.fav span {
	background-color: #969;  /* purple */
}
.cssBurst.new, .cssBurst.new span,
.cssBurst.back, .cssBurst.back span,
.cssBurst.going, .cssBurst.going span  {
	background-color: #060;  /* green */
}
.portrait-item.unavailable .cssBurst { /* hide bursts on unavail products */
	display: none;
}
.pdp-atc #pdp-atc-addtolist:focus{
	text-decoration: underline;
	color: #5fb069 !important;
	box-shadow:none;
}
#transactionalPopup .portrait-item-atl .fakeaddtolist.cssbutton.cssbutton-flat.purpleborder:focus{
	text-decoration: underline;
    color: #5fb069 !important;
    box-shadow:none;
}
#evenBetterPopup .pdp-evenbetter-atc .pdp-evenbetter-atcbutton button.cssbutton[data-component="addToListButton"]:focus {
    text-decoration: underline;
    color: #5fb069 !important;
    box-shadow:none;
}
[data-feature-productcard="2018"] .portrait-item-price .portrait-item-price-deal,
[data-feature-productcard="2018"] .portrait-item-price-deal,
[data-feature-productcard="2018"] .portrait-item a.portrait-item-price-deal,
[data-feature-productcard="2018"] .portrait-item a.portrait-item-price-deal:link
 {
  position: absolute;
  top: 143px;
  background-color: #c44;
  color: #fff;
  max-width: 120px;
  padding: 3px 10px 3px 3px;
  width: 120px;
  height: 37px;
  opacity: 0.8;
  box-sizing: border-box;
}

[data-feature-productcard="2018"] .portrait-item-price .portrait-item-price-deal:after {
	content: "\e876";
	line-height: 3em;
	right: 0;
	position: absolute;
	top: 0;
	font-family: 'freshdirect_icons';
	font-style: normal;
	font-weight: bold;
	font-variant: normal;
	text-transform: none;
	/* line-height: 1; */
	vertical-align: text-bottom;
	/* Better Font Rendering =========== */
	-webkit-font-smoothing: antialiased;
	font-size: 12px;
	-moz-osx-font-smoothing: grayscale;
}

[data-feature-productcard="2018"] .portrait-item-price .portrait-item-price-deal.notGrpLink {
  top: 10px;
  right: 0;
  height: 20px;
  padding-right: 3px;
  text-align: right;
  width: auto;
  margin-right: 10px;
}
/* ... */

